test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-oknil-owned.good
init-var-nonnil-borrowed-from-oknil-owned.chpl:9: error: cannot assign to non-nilable borrowed MyClass from nilable owned MyClass?
